--- a/management/design/design.org
+++ b/management/design/design.org
@@ -122,7 +122,7 @@ data defined in the source code, loaded into memory at runtime,
 queryable via the Query protocol.
 
 Student authentication is done through the VUB's authentication
-API. And sessions are stored in memory.
+API. And sessions are stored in cookies.
 * Patterns (niet?)
 * Interface
 Xiast will need a number of interfaces to grant access to, and
