fixed last error

--- a/management/project/spmp.tex
+++ b/management/project/spmp.tex
@@ -176,6 +176,8 @@ use of certain technologies have been defined by the client:
   ``Github'' must be used as public repository for
   the code.
 \item
+  All documents mustbe written in the Markdown language
+\item
   All documents, source code and other artefacts must be publicly
   available in a structured way.
 \item
@@ -186,8 +188,6 @@ use of certain technologies have been defined by the client:
   Requirements IDs may never be renumbered.
 \item
   All of the code needs to be documentated.
-\item
-  Test must be written using the ``JUnit'' framework.
 \item
   The system must be modular in design to accomodate extension and
   replacement of the containing modules.
@@ -269,10 +269,6 @@ beginning of this document.
   Github
 
   https://github.com
-\item
-  JUnit framework
-
-  http://junit.org/
 \item
   Markable.in
 
@@ -1682,13 +1678,14 @@ tools and languages must be mastered by the whole team:
 \item
   Git
 \item
-  Java (and JUNIT)
+  Java 
 \end{itemize}
+
+See also "Project Staff Training Plan".
 
 \section{Additional Plans}\label{additional-plans}
 
 Following documents play also a role of importance in this project: SRS,
-SDD They will be delivered Friday 15th, 2013: deadline for the other
-documents.
+SDD They will be delivered together with this document.
 
 \end{document}
